--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(SecFun VERSION 1.0 LANGUAGES CXX)
+project(SecFun VERSION 1.1 LANGUAGES CXX)
 
 set(HEADERS SecondFunk/SecondaryFunction.h)
 set(SOURCES SecondFunk/SecondaryFunction.cpp)
@@ -11,9 +11,9 @@ add_library(${PROJECT_NAME}_lib SHARED ${HEADERS} ${SOURCES})
 # настройка на стандарт с++17
 if(MSVC)
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME}_lib)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 else()
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 endif()
